force-app/main/default/objects/MatchingSetting__c/MatchingSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>マッチング</label>
</CustomObject>