force-app/main/default/objects/MatchingSetting__c/fields/DoManualMatchingEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>DoManualMatchingEventErrorMessage__c</fullName>
    <label>手動マッチング実行イベントエラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>