force-app/main/default/objects/MatchingSetting__c/fields/FieldSuffix__c.field-meta.xml
<CustomField>
    <fullName>FieldSuffix__c</fullName>
    <label>項目接尾辞</label>
    <length>10</length>
    <type>Text</type>
</CustomField>