force-app/main/default/objects/MatchingSetting__c/fields/GetMatchingEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>GetMatchingEventErrorMessage__c</fullName>
    <label>画面初期表示エラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>