force-app/main/default/objects/MatchingSetting__c/fields/MatchingComparisonResultNg__c.field-meta.xml
<CustomField>
    <fullName>MatchingComparisonResultNg__c</fullName>
    <label>マッチング比較結果_NG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>