force-app/main/default/objects/MatchingSetting__c/fields/MatchingComparisonResultOk__c.field-meta.xml
<CustomField>
    <fullName>MatchingComparisonResultOk__c</fullName>
    <label>マッチング比較結果_OK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>