force-app/main/default/objects/MatchingSetting__c/fields/PaperTypeBill__c.field-meta.xml
<CustomField>
    <fullName>PaperTypeBill__c</fullName>
    <label>帳票種類‗請求書</label>
    <length>10</length>
    <type>Text</type>
</CustomField>