force-app/main/default/objects/MatchingSetting__c/fields/PaperTypeContract__c.field-meta.xml
<CustomField>
    <fullName>PaperTypeContract__c</fullName>
    <label>帳票種類‗契約書</label>
    <length>10</length>
    <type>Text</type>
</CustomField>