force-app/main/default/objects/MatchingSetting__c/fields/PaperTypeDrawing__c.field-meta.xml
<CustomField>
    <fullName>PaperTypeDrawing__c</fullName>
    <label>帳票種類‗図面</label>
    <length>10</length>
    <type>Text</type>
</CustomField>