force-app/main/default/objects/MatchingSetting__c/fields/PaperTypeImportantExplanation__c.field-meta.xml
<CustomField>
    <fullName>PaperTypeImportantExplanation__c</fullName>
    <label>帳票種類‗重説</label>
    <length>10</length>
    <type>Text</type>
</CustomField>