force-app/main/default/objects/MatchingSetting__c/fields/RecordTypeNameParkingApplication__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeNameParkingApplication__c</fullName>
    <label>レコードタイプ名駐車場申請</label>
    <length>10</length>
    <type>Text</type>
</CustomField>