force-app/main/default/objects/MatchingSetting__c/fields/ResultFieldSuffix__c.field-meta.xml
<CustomField>
    <fullName>ResultFieldSuffix__c</fullName>
    <label>結果項目接尾辞</label>
    <length>10</length>
    <type>Text</type>
</CustomField>