force-app/main/default/objects/MatchingSetting__c/fields/SendTaskAutoProcessCompleteMessage__c.field-meta.xml
<CustomField>
    <fullName>SendTaskAutoProcessCompleteMessage__c</fullName>
    <label>TODO自動マッチング完了コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>