force-app/main/default/objects/MatchingSetting__c/fields/SendTaskAutoProcessCompleteSubject__c.field-meta.xml
<CustomField>
    <fullName>SendTaskAutoProcessCompleteSubject__c</fullName>
    <label>TODO自動マッチング完了件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>