force-app/main/default/objects/MatchingSetting__c/fields/SendTaskAutoProcessErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SendTaskAutoProcessErrorMessage__c</fullName>
    <label>TODO自動マッチングエラーコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>