force-app/main/default/objects/MatchingSetting__c/fields/SendTaskAutoProcessErrorSubject__c.field-meta.xml
<CustomField>
    <fullName>SendTaskAutoProcessErrorSubject__c</fullName>
    <label>TODO自動マッチングエラー件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>