force-app/main/default/objects/MatchingSetting__c/fields/TaskErrorPriority__c.field-meta.xml
<CustomField>
    <fullName>TaskErrorPriority__c</fullName>
    <label>TODOエラー通知_優先度</label>
    <length>10</length>
    <type>Text</type>
</CustomField>