force-app/main/default/objects/MatchingSetting__c/fields/TaskErrorStatus__c.field-meta.xml
<CustomField>
    <fullName>TaskErrorStatus__c</fullName>
    <label>TODOエラー通知_ステータス</label>
    <length>10</length>
    <type>Text</type>
</CustomField>