force-app/main/default/objects/MatchingSetting__c/fields/TaskErrorSubtype__c.field-meta.xml
<CustomField>
    <fullName>TaskErrorSubtype__c</fullName>
    <label>TODOエラー通知_サブ種別</label>
    <length>10</length>
    <type>Text</type>
</CustomField>