force-app/main/default/objects/MatchingSetting__c/fields/TaskPriority__c.field-meta.xml
<CustomField>
    <fullName>TaskPriority__c</fullName>
    <label>TODO通知_優先度</label>
    <length>10</length>
    <type>Text</type>
</CustomField>