force-app/main/default/objects/MatchingSetting__c/fields/TaskStatus__c.field-meta.xml
<CustomField>
    <fullName>TaskStatus__c</fullName>
    <label>TODO通知_ステータス</label>
    <length>10</length>
    <type>Text</type>
</CustomField>