force-app/main/default/objects/MatchingSetting__c/fields/TaskSubtype__c.field-meta.xml
<CustomField>
    <fullName>TaskSubtype__c</fullName>
    <label>TODO通知_サブ種別</label>
    <length>10</length>
    <type>Text</type>
</CustomField>