force-app/main/default/objects/MatchingSetting__c/fields/TypeFieldSuffix__c.field-meta.xml
<CustomField>
    <fullName>TypeFieldSuffix__c</fullName>
    <label>区分項目接尾辞</label>
    <length>10</length>
    <type>Text</type>
</CustomField>