force-app/main/default/objects/MatchingSetting__c/fields/UpdateMatchingEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>UpdateMatchingEventErrorMessage__c</fullName>
    <label>登録イベントエラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>